# InstrumentalSW_AIModule

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yml  sax031-diagnostics.yml  sax031-verification.yml  sax032-command-metrics.yml  sax033-metrics.yml  sax034-diagnostics.yml  sax034-metrics.yml  sax034-readme-artifact.yml  sax034-readme.yml  sax034-red.yml  sax035-diagnostics.yml  sax035-docs-finalize.yml  sax035-final-diagnostics.yml  sax035-metrics.yml  sax035-readme.yml  sax035-red.yml  sax042-final-diagnostics.yml  sax042-format-diagnostics.yml  sax042-quality-diagnostics.yml  sax042-stage-diagnostics.yml  sax043-clean-diagnostics.yml  sax043-diagnostics.yml  sax043-docs-finalize.yml  sax043-final-diagnostics.yml  sax043-last-diagnostics.yml  sax043-quality-diagnostics.yml  sax045-diagnostics.yml  sax045-final-diagnostics.yml  sax045-last-diagnostics.yml  sax045-post-quality-diagnostics.yml  sax045-readme.yml  sax045-ruff-autofix.yml  sax045-ruff-final.yml  sax045-stage-diagnostics.yml
dataset-registry/: registry-v1.json
docs/baselines/: hf-saxophone-v1.md
docs/contracts/: dataset-provenance-license-v1.md  midi-export-v1.md  musicxml-export-v1.md  note-confidence-v1.md  note-event-postprocessing-v1.md  note-event-v1.md  revision-artifact-download-api-v1.md  rhythm-quantization-v1.md  score-rendering-v1.md  tempo-resolution-v1.md  transcription-review-api-v1.md  transcription-revisions-api-v1.md  written-pitch-v1.md
docs/tdd/: iteration-001.md  iteration-002.md  (+17 more)
scripts/: check_quality.py  install_baseline.py  sax032_command_metrics.py
tests/: __init__.py  conftest.py  musicxml_helpers.py  review_helpers.py  score_render_helpers.py
(+127 files in other folders)
