[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "instrumentalsw-ai-module"
version = "0.1.0"
description = "FastAPI service for the InstrumentalSW (Saxo) AI module."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<0.139",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "hatchling>=1.25,<2",
  "httpx2>=2,<3",
  "mypy>=1.13,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "PyYAML>=6,<7",
  "types-PyYAML>=6.0.12,<7",
  "ruff>=0.9,<1",
]
baseline = [
  "hf-midi-transcription @ git+https://github.com/xavriley/hf_midi_transcription.git@96f6797881e9497cbfc8f8e5deccea9c1f2f7adc; python_version < '3.12'",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/saxo_ai"]
dev-mode-dirs = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]
markers = [
  "integration: tests that require external audio or model runtimes",
  "baseline_integration: real pinned FiloSax checkpoint download and inference",
]

[tool.coverage.run]
branch = true
source = ["saxo_ai"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = "src"
